--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,3 +300,384 @@ nav a:hover {
 
 .topnav { display: none; }
 
+/* ==========================================================================
+   4. Main
+   ========================================================================== */
+/* 4.1. banner
+   ========================================================================== */
+
+
+.banner .wrapper { width: 100%; }
+
+.banner img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* 4.2. portfolio
+   ========================================================================== */
+
+.portfolio .wrapper { padding: 70px 0px 0px 0px; }
+.portfolio h2 { text-align: center; }
+
+.portfolio p {
+  padding: 14px;
+  font-size: 20px;
+  letter-spacing: 0.33px;
+  text-align: center;
+}
+
+.portfolio-cta {
+  padding: 32px;
+  display: block;
+  text-align: center;
+}
+
+.portfolio-cta li {
+  margin: auto 8px;
+  display: inline-block;
+}
+
+.portfolio-cta a {
+  padding: 13px 20px;
+  display: inline-block;
+  background-color: #1cbc9b;
+  color: #fff;
+}
+
+.portfolio-cta a:hover { background-color: #03886e; }
+.portfolio-cta .activeCta { background-color: #03886e; }
+
+.row {
+  padding-top: 15px;
+  padding-bottom: 47px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.row .content:hover { opacity: 1; }
+.row .content:hover + figure { opacity: 0.5; }
+
+.img {
+  border-radius: 100%;
+  display: -webkit-box;
+  overflow: hidden;
+  position: relative;
+}
+
+.img img {
+  height: 100%;
+  width: 227px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.overlay {
+  margin: 13px;
+  border-radius: 100%;
+  overflow: hidden;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transition: opacity 0.25s;
+  -o-transition: opacity 0.25s;
+  transition: opacity 0.25s;
+  z-index: 1;
+}
+
+.overlay:hover { opacity: 1; }
+
+.overlay {
+  background-color: #6f6f6f66;
+  color: #fafafa;
+}
+
+.row div img {
+  width: 58px;
+  height: 58px;
+  margin-top: 20px;
+  margin-left: 90px;
+  margin-right: auto;
+  border-radius: 40px;
+  display: block;
+  opacity: 0.8;
+}
+
+.row .content span {
+  width: 100%;
+  color: #fff;
+}
+
+.row .contentTitle {
+  margin: -35px auto 0px;
+  display: block;
+  color: #bfbfbf;
+  font-size: 22px;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.row .contentType {
+  margin: -65px 20px 10px;
+  text-transform: capitalize;
+  font-size: 19px;
+  text-align: center;
+}
+
+.column { display: none; }
+.column-show { display: inline-block; }
+.row li { padding-bottom: 20px; }
+.aboutus { background-color: #16a086; }
+.aboutus .wrapper { padding: 70px 40px 90px; }
+
+.aboutus h2 {
+  margin: auto;
+  color: #fff;
+  text-align: center;
+}
+
+.aboutus p {
+  margin: 12px auto 30px;
+  color: #fff;
+  text-align: center;
+  font-weight: 500;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+}
+
+.cards {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+}
+
+.card-container {
+  position: relative;
+  cursor: pointer;
+}
+
+.cardLinks {
+  position: absolute;
+  top: 350px;
+  left: 0;
+}
+
+.card-over {
+  width: 100%;
+  position: absolute;
+  top: 24%;
+  bottom: 0;
+  left: 9%;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.card-over img { width: 75%; }
+.card-container:hover .card-over { opacity: 0.8; }
+.info { background-color: #fff; }
+
+.card img {
+  width: 290px;
+  height: 300px;
+}
+
+.card .info {
+  width: 290px;
+  padding: 25px 13px;
+}
+
+.card h3 {
+  color: #808080;
+  font-size: 24px;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.card span {
+  display: block;
+  color: #808080;
+}
+
+.card-title {
+  padding-top: 2px;
+  padding-bottom: 23px;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 17px;
+  font-style: italic;
+  font-weight: 500;
+}
+
+.card-info {
+  font-size: 18px;
+  text-transform: none;
+  line-height: 26px;
+}
+
+.card-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+/* 4.4. contactus
+   ========================================================================== */
+   
+.contactus { background-color: #ebf1f1;}
+.contactus .wrapper { padding: 60px 0px 80px;}
+.contactus h2 { text-align: center; }
+
+.contactus p {
+  margin: 12px auto 65px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+}
+
+.form {
+  width: 50%;
+  display: inline-block;
+}
+
+form input, form textarea { border: 3px solid #bec3c6; }
+
+form input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #bec3c6;
+  font-weight: 600;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+
+form input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #bec3c6;
+  font-weight: 600;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+
+form input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: #bec3c6;
+  font-weight: 600;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+
+form input::-ms-input-placeholder, textarea::-ms-input-placeholder {
+  color: #bec3c6;
+  font-weight: 600;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+
+form input::placeholder, textarea::placeholder {
+  color: #bec3c6;
+  font-weight: 600;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+
+form input { padding: 20px 15px; }
+
+form [name="yourname"] {
+  width: 46.65%;
+  display: inline-block;
+}
+
+form [name="email"] {
+  width: 46.65%;
+  margin-left: 20px;
+  display: inline-block;
+}
+
+form textarea {
+  width: 97.2%;
+  margin: 30px 0px;
+}
+
+form [name="submit"] {
+  padding: 13px 40px;
+  margin-right: 20px;
+  border: none;
+  display: block;
+  background-color: #16a086;
+  color: #fff;
+  font-size: 19px;
+  float: right;
+  clear: right;
+}
+
+form textarea { padding: 20px 15px 135px; }
+
+.formarea {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contact-info {
+  width: 48%;
+  display: inline-block;
+  position: absolute;
+}
+
+.contact-info h3 {
+  font-size: 18px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+
+.contact-info span {
+  display: block;
+  font-size: 18.5px;
+  line-height: 26px;
+}
+
+.contact-info div span {
+  line-height: 30px;
+  white-space: pre;
+}
+
+.contact-info a {
+  padding: 0%;
+  color: black;
+  text-transform: none;
+}
+
+main .material-icons { font-size: 18px; }
+.contact-info .address { margin: 20px 0px; }
+.contact-info .fax { margin: 20px 0px; }
+
