--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,3 +713,189 @@ footer div a {
   background-color: #16a086;
 }
 
+/* ========================================================================== 
+    6.media querries
+==========================================================================  */
+@media only screen and (max-width: 995px) {
+  .hamburger {
+    height: 10px;
+    width: 50px;
+    margin: 5px;
+    position: relative;
+    display: block;
+  }
+  
+  .line {
+    height: 2px;
+    width: 30px;
+    display: block;
+    position: absolute;
+    left: 30%;
+    background-color: #000;
+    -webkit-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+  }
+
+  .line1 { top: 10%; }
+  .line2 { top: 50%; }
+  .line3 { top: 90%; }
+
+  .active .line1 {
+    top: 40%;
+    -webkit-transform: rotateZ(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotateZ(45deg);
+  }
+
+  .active .line2 { opacity: 0; }
+
+  .active .line3 {
+    top: 40%;
+    -webkit-transform: rotateZ(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotateZ(-45deg);
+  }
+
+  header h1 { display: inline-block; }
+  nav { display: none; }
+  .topnav {
+    width: 30%;
+    height: 100%;
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #16a086;
+    z-index: 1;
+    overflow: hidden;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+
+  .topnav ul a {
+    display: block;
+    color: #fff;
+    text-align: left;
+  }
+
+  .topnav .left-menu {
+    width: 80px;
+    height: 100%;
+    display: inline-block;
+  }
+
+  .topnav .hamMenu {
+    width: 150px;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
+  }
+
+  .topmenu {
+    width: 10%;
+    height: 40px;
+    position: absolute;
+    top: 50px;
+    background-color: #fff;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+
+  .topnav a:hover {
+    color: #000;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+  }
+
+  .portfolio-cta {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .portfolio-cta li {
+    margin: 10px 8px;
+  }
+
+  .aboutus .wrapper {
+    padding: 30px 40px 40px;
+  }
+
+}
+
+@media only screen and (max-width: 767px) {
+  .topnav .left-menu { width: 50px; }
+  .topnav ul a { font-size: 17px; }
+  .topnav { width: 40%; }
+  .topmenu { width: 10%; }
+  .formarea { display: block; }
+
+  form [name="yourname"] {
+    width: 95%;
+    display: block;
+  }
+
+  form [name="email"] {
+    width: 95%;
+    margin: 5px 0px 0px;
+    display: block;
+  }
+
+  .contactus .wrapper { padding: 30px 0px 30px; }
+
+  footer div {
+    display: block;
+    float: none;
+    text-align: center;
+  }
+
+  footer p {
+    padding: 26px 0px;
+    display: block;
+    text-align: center;
+  }
+
+  footer .material-icons { font-size: 30px; }
+}
+
+@media only screen and (max-width: 540px) {
+  header { padding: 15px 0px 15px; }
+  header img { width: 200px; }
+  .topnav { width: 60%; }
+
+  .topmenu {
+    width: 15%;
+    height: 30px;
+    top: 20px;
+  }
+
+  .portfolio-cta a {
+    padding: 7px 10px;
+    font-size: 17px;
+  }
+
+  .portfolio .wrapper { padding: 30px 0px 0px 0px; }
+  .portfolio-cta { padding: 0px; }
+  .aboutus .wrapper { padding: 30px 40px 40px; }
+
+  .form {
+    width: 100%;
+    display: block;
+  }
+
+  .contact-info {
+    width: 100%;
+    display: block;
+    position: relative;
+    padding: 30px 10px;
+  }
+}
